--- a/component-test/build.gradle
+++ b/component-test/build.gradle
@@ -25,7 +25,7 @@ configurations {
     compile.exclude(group: 'org.slf4j', module: 'slf4j-log4j12')
 }
 springBoot {
-    mainClassName = 'com.publicissapient.Applicationn'
+    mainClassName = 'com.interlinksoftware.Application'
 }
 
 
